Java 9+ compatibility by adding JAXB to dependencies #531